--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,61 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --text: #4a5568;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: #1a202c;
+  --foreground: #f7fafc;
+  --text: #cbd5e0;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #edb33c;
+  /* color: var(--foreground); */
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#content {
+  background-color: var(--background);
+}
+
+p {
+  color: var(--text);
+}
+h1, h2, h3, h4, h5, h6 {
+  color: var(--foreground);
+}
+
+#tecnologias div {
+  background-color: var(--background);
+}
+
+
+header {
+  background-color: var(--background);
+}
+header p#title-header::before {
+  content: "{";
+  color: #edb33c;
+  font-weight: bold;
+}
+header p#title-header::after {
+  content: "}";
+  color: #edb33c;
+  font-weight: bold;
+}
+
+p#title::before {
+  content: "— ";
+  color: #edb33c;
+  font-weight: bold;
+  font-size: large;
+}
+
+p#title::after {
+  content: " —";
+  color: #edb33c;
+  font-weight: bold;
+  font-size: large;
 }
